// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render unselected RadioButton component correctly 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
}

.c0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c0 .radioOuter {
  border: solid 1px #6f7171;
}

.c0:hover:not(:active) .radioOuter {
  border-color: #6f7171;
  box-shadow: 0 0 0 0.0625rem #6f7171;
}

.c0:active .radioOuter {
  border-color: #000000;
}

.c0:active:hover .radioOuter {
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c1 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: pointer;
  pointer-events: auto;
}

.c1:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

<div
  class="radioWrapper c0"
>
  <input
    aria-label="Unselected Radio"
    class="c1"
    id="1"
    name="test"
    role="radio"
    type="radio"
    value="test value"
  />
  <label
    class="c2"
    for="1"
    name="test"
  >
    <div
      class="c3"
    >
      <div
        aria-hidden="true"
        class="radioOuter c4"
        focusable="false"
        height="20"
        width="20"
      />
    </div>
    <div
      class=""
      id="label-1"
      role=""
    >
      <div
        aria-hidden="true"
      >
        Unselected Radio
      </div>
    </div>
  </label>
</div>
`;

exports[`RadioGroup <RadioButton /> 1.0 inverted 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #ffffff;
  color: #333333;
  cursor: default;
}

.c0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c0 .radioOuter {
  background: transparent;
  border: solid 1px #333333;
}

.c1 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: default;
  pointer-events: auto;
}

.c1:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #ffffff;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

<div>
  <div
    class="radioWrapper c0"
    disabled=""
  >
    <input
      aria-label="Unchecked Radio"
      class="c1"
      disabled=""
      id="1"
      name="test"
      role="radio"
      type="radio"
      value="test-value-2"
    />
    <label
      class="c2"
      disabled=""
      for="1"
      name="test"
    >
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="radioOuter c4"
          disabled=""
          focusable="false"
          height="20"
          width="20"
        />
      </div>
      <div
        class=""
        id="label-1"
        role=""
      >
        <div
          aria-hidden="true"
        >
          Unchecked Radio
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup <RadioButton /> 1.0 on Edge 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c5 {
  background-color: #000000;
  border-radius: 50%;
  height: 0.625rem;
  width: 0.625rem;
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.25rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

.c0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c0 .radioOuter {
  border: solid 1px #000000;
}

.c0:hover:not(:active) .radioOuter {
  border-color: #000000;
  box-shadow: 0 0 0 0 #000000;
}

.c0:active .radioOuter {
  border-color: #000000;
}

.c0:active:hover .radioOuter {
  box-shadow: 0 0 0 0 #000000;
}

.c1 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: pointer;
  pointer-events: auto;
}

.c1:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

<div>
  <div
    class="radioWrapper c0"
  >
    <input
      aria-label="test Unchecked Radio"
      class="c1"
      id="radiobtn"
      name="test"
      role="radio"
      type="radio"
      value="test-value-1"
    />
    <label
      class="c2"
      for="radiobtn"
      label="test"
      name="test"
    >
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="radioOuter c4"
          focusable="false"
          height="20"
          width="20"
        >
          <div
            class="c5"
          />
        </div>
      </div>
      <div
        class=""
        id="label-radiobtn"
        role=""
      >
        <span
          aria-hidden="true"
          class="c6"
        >
          test
        </span>
        <div
          aria-hidden="true"
        >
          Unchecked Radio
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup <RadioButton /> 1.0 on Firefox 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c5 {
  background-color: #000000;
  border-radius: 50%;
  height: 0.625rem;
  width: 0.625rem;
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.25rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

.c0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c0 .radioOuter {
  border: solid 1px #000000;
}

.c0:hover:not(:active) .radioOuter {
  border-color: #000000;
  box-shadow: 0 0 0 0 #000000;
}

.c0:active .radioOuter {
  border-color: #000000;
}

.c0:active:hover .radioOuter {
  box-shadow: 0 0 0 0 #000000;
}

.c1 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: pointer;
  pointer-events: auto;
}

.c1:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

<div>
  <div
    class="radioWrapper c0"
  >
    <input
      aria-label="test Unchecked Radio"
      class="c1"
      id="radiobtn"
      name="test"
      role="radio"
      type="radio"
      value="test-value-1"
    />
    <label
      class="c2"
      for="radiobtn"
      label="test"
      name="test"
    >
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="radioOuter c4"
          focusable="false"
          height="20"
          width="20"
        >
          <div
            class="c5"
          />
        </div>
      </div>
      <div
        class=""
        id="label-radiobtn"
        role=""
      >
        <span
          aria-hidden="true"
          class="c6"
        >
          test
        </span>
        <div
          aria-hidden="true"
        >
          Unchecked Radio
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup <RadioButton /> 1.0 on IE 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c5 {
  background-color: #000000;
  border-radius: 50%;
  height: 0.625rem;
  width: 0.625rem;
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.25rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

.c0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c0 .radioOuter {
  border: solid 1px #000000;
}

.c0:hover:not(:active) .radioOuter {
  border-color: #000000;
  box-shadow: 0 0 0 0 #000000;
}

.c0:active .radioOuter {
  border-color: #000000;
}

.c0:active:hover .radioOuter {
  box-shadow: 0 0 0 0 #000000;
}

.c1 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: pointer;
  pointer-events: auto;
}

.c1:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

<div>
  <div
    class="radioWrapper c0"
  >
    <input
      aria-label="test Unchecked Radio"
      class="c1"
      id="radiobtn"
      name="test"
      role="radio"
      type="radio"
      value="test-value-1"
    />
    <label
      class="c2"
      for="radiobtn"
      label="test"
      name="test"
    >
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="radioOuter c4"
          focusable="false"
          height="20"
          width="20"
        >
          <div
            class="c5"
          />
        </div>
      </div>
      <div
        class=""
        id="label-radiobtn"
        role=""
      >
        <span
          aria-hidden="true"
          class="c6"
        >
          test
        </span>
        <div
          aria-hidden="true"
        >
          Unchecked Radio
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup <RadioButton /> 1.0 on Opera 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c5 {
  background-color: #000000;
  border-radius: 50%;
  height: 0.625rem;
  width: 0.625rem;
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.25rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

.c0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c0 .radioOuter {
  border: solid 1px #000000;
}

.c0:hover:not(:active) .radioOuter {
  border-color: #000000;
  box-shadow: 0 0 0 0 #000000;
}

.c0:active .radioOuter {
  border-color: #000000;
}

.c0:active:hover .radioOuter {
  box-shadow: 0 0 0 0 #000000;
}

.c1 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: pointer;
  pointer-events: auto;
}

.c1:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

<div>
  <div
    class="radioWrapper c0"
  >
    <input
      aria-label="test Unchecked Radio"
      class="c1"
      id="radiobtn"
      name="test"
      role="radio"
      type="radio"
      value="test-value-1"
    />
    <label
      class="c2"
      for="radiobtn"
      label="test"
      name="test"
    >
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="radioOuter c4"
          focusable="false"
          height="20"
          width="20"
        >
          <div
            class="c5"
          />
        </div>
      </div>
      <div
        class=""
        id="label-radiobtn"
        role=""
      >
        <span
          aria-hidden="true"
          class="c6"
        >
          test
        </span>
        <div
          aria-hidden="true"
        >
          Unchecked Radio
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup <RadioButton /> 1.0 on Safari 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c5 {
  background-color: #000000;
  border-radius: 50%;
  height: 0.625rem;
  width: 0.625rem;
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.25rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

.c0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c0 .radioOuter {
  border: solid 1px #000000;
}

.c0:hover:not(:active) .radioOuter {
  border-color: #000000;
  box-shadow: 0 0 0 0 #000000;
}

.c0:active .radioOuter {
  border-color: #000000;
}

.c0:active:hover .radioOuter {
  box-shadow: 0 0 0 0 #000000;
}

.c1 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: pointer;
  pointer-events: auto;
}

.c1:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

<div>
  <div
    class="radioWrapper c0"
  >
    <input
      aria-label="test Unchecked Radio"
      class="c1"
      id="radiobtn"
      name="test"
      role="radio"
      type="radio"
      value="test-value-1"
    />
    <label
      class="c2"
      for="radiobtn"
      label="test"
      name="test"
    >
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="radioOuter c4"
          focusable="false"
          height="20"
          width="20"
        >
          <div
            class="c5"
          />
        </div>
      </div>
      <div
        class=""
        id="label-radiobtn"
        role=""
      >
        <span
          aria-hidden="true"
          class="c6"
        >
          test
        </span>
        <div
          aria-hidden="true"
        >
          Unchecked Radio
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup <RadioButton /> 1.0 on chrome 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c5 {
  background-color: #000000;
  border-radius: 50%;
  height: 0.625rem;
  width: 0.625rem;
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.25rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

.c0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c0 .radioOuter {
  border: solid 1px #000000;
}

.c0:hover:not(:active) .radioOuter {
  border-color: #000000;
  box-shadow: 0 0 0 0 #000000;
}

.c0:active .radioOuter {
  border-color: #000000;
}

.c0:active:hover .radioOuter {
  box-shadow: 0 0 0 0 #000000;
}

.c1 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: pointer;
  pointer-events: auto;
}

.c1:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

<div>
  <div
    class="radioWrapper c0"
  >
    <input
      aria-label="test Unchecked Radio"
      class="c1"
      id="radiobtn"
      name="test"
      role="radio"
      type="radio"
      value="test-value-1"
    />
    <label
      class="c2"
      for="radiobtn"
      label="test"
      name="test"
    >
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="radioOuter c4"
          focusable="false"
          height="20"
          width="20"
        >
          <div
            class="c5"
          />
        </div>
      </div>
      <div
        class=""
        id="label-radiobtn"
        role=""
      >
        <span
          aria-hidden="true"
          class="c6"
        >
          test
        </span>
        <div
          aria-hidden="true"
        >
          Unchecked Radio
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup <RadioButton /> 1.0 undefined check and errorEvents 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
  color: #d8dada;
  cursor: default;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.25rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

.c0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c0 .radioOuter {
  background: transparent;
  border: solid 1px #d8dada;
}

.c1 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: default;
  pointer-events: auto;
}

.c1:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

<div>
  <div
    class="radioWrapper c0"
    disabled=""
  >
    <input
      aria-label="test Unchecked Radio"
      class="c1"
      disabled=""
      id="radiobtn"
      name="test"
      role="radio"
      type="radio"
      value="test-value-1"
    />
    <label
      class="c2"
      disabled=""
      for="radiobtn"
      label="test"
      name="test"
    >
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="radioOuter c4"
          disabled=""
          focusable="false"
          height="20"
          width="20"
        />
      </div>
      <div
        class=""
        id="label-radiobtn"
        role=""
      >
        <span
          aria-hidden="true"
          class="c5"
        >
          test
        </span>
        <div
          aria-hidden="true"
        >
          Unchecked Radio
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup <RadioButtonGroup /> 1.0 errorState with data 1`] = `
.c4 {
  box-sizing: border-box;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c6 {
  background-color: #000000;
  border-radius: 50%;
  height: 0.625rem;
  width: 0.625rem;
  position: absolute;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.25rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

.c8 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c8 .radioOuter {
  border: solid 1px #6f7171;
}

.c8:hover:not(:active) .radioOuter {
  border-color: #b95319;
  box-shadow: 0 0 0 0.0625rem #b95319;
}

.c8:active .radioOuter {
  border-color: #b95319;
}

.c8:active:hover .radioOuter {
  box-shadow: 0 0 0 0.0625rem #b95319;
}

.c8 .radioOuter {
  background-color: #ffece0;
  border-color: #b95319;
  box-shadow: none;
}

.c1 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c1 .radioOuter {
  border: solid 1px #000000;
}

.c1:hover:not(:active) .radioOuter {
  border-color: #b95319;
  box-shadow: 0 0 0 0 #b95319;
}

.c1:active .radioOuter {
  border-color: #b95319;
}

.c1:active:hover .radioOuter {
  box-shadow: 0 0 0 0 #b95319;
}

.c1 .radioOuter {
  background-color: #ffece0;
  border-color: #b95319;
  box-shadow: none;
}

.c2 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: pointer;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 1.25rem;
}

.c0 > .radioWrapper {
  margin-top: 1.5rem;
}

.c0 > .radioWrapper:first-child {
  margin-top: 0;
}

<div>
  <div
    aria-label=""
    class="c0"
    role="radiogroup"
  >
    <div
      class="radioWrapper c1"
    >
      <input
        aria-label="radio one"
        class="c2"
        id="1"
        name="group"
        role="radio"
        tabindex="0"
        type="radio"
        value="radioOne"
      />
      <label
        class="c3"
        for="1"
        label="In-store Pickup"
        name="group"
      >
        <div
          class="c4"
        >
          <div
            aria-hidden="true"
            class="radioOuter c5"
            focusable="false"
            height="20"
            width="20"
          >
            <div
              class="c6"
            />
          </div>
        </div>
        <div
          class=""
          id="label-1"
          role=""
        >
          <span
            aria-hidden="true"
            class="c7"
          >
            In-store Pickup
          </span>
          <div
            aria-hidden="true"
          >
            Select Location
          </div>
        </div>
      </label>
    </div>
    <div
      class="radioWrapper c8"
    >
      <input
        aria-label="radio two"
        class="c2"
        id="1"
        name="group"
        role="radio"
        tabindex="-1"
        type="radio"
        value="radioTwo"
      />
      <label
        class="c3"
        for="1"
        label="Ship to me"
        name="group"
      >
        <div
          class="c4"
        >
          <div
            aria-hidden="true"
            class="radioOuter c5"
            focusable="false"
            height="20"
            width="20"
          />
        </div>
        <div
          class=""
          id="label-1"
          role=""
        >
          <span
            aria-hidden="true"
            class="c7"
          >
            Ship to me
          </span>
          <div
            aria-hidden="true"
          >
            Eligible for Free 2-day shipping
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup <RadioButtonGroup /> 1.0 errorState with radios 1`] = `
.c4 {
  box-sizing: border-box;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -1.25rem;
  position: absolute;
  right: 0;
  top: 0;
  width: 1.25rem;
  box-sizing: border-box;
}

.c6 {
  background-color: #000000;
  border-radius: 50%;
  height: 0.625rem;
  width: 0.625rem;
  position: absolute;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  font-size: 1rem;
  font-family: Verizon-NHG-eDS;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  cursor: pointer;
  color: #000000;
}

.c7 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c7 .radioOuter {
  border: solid 1px #6f7171;
}

.c7:hover:not(:active) .radioOuter {
  border-color: #b95319;
  box-shadow: 0 0 0 0.0625rem #b95319;
}

.c7:active .radioOuter {
  border-color: #b95319;
}

.c7:active:hover .radioOuter {
  box-shadow: 0 0 0 0.0625rem #b95319;
}

.c7 .radioOuter {
  background-color: #ffece0;
  border-color: #b95319;
  box-shadow: none;
}

.c1 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  position: relative;
  margin: 0;
  padding: 0 0 0 12px;
}

.c1 .radioOuter {
  border: solid 1px #000000;
}

.c1:hover:not(:active) .radioOuter {
  border-color: #b95319;
  box-shadow: 0 0 0 0 #b95319;
}

.c1:active .radioOuter {
  border-color: #b95319;
}

.c1:active:hover .radioOuter {
  box-shadow: 0 0 0 0 #b95319;
}

.c1 .radioOuter {
  background-color: #ffece0;
  border-color: #b95319;
  box-shadow: none;
}

.c2 {
  position: absolute;
  opacity: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  border: 0;
  white-space: nowrap;
  top: -12px;
  width: 44px;
  height: 44px;
  right: calc(100% - 12px);
  cursor: pointer;
  pointer-events: auto;
}

.c2:focus:not(:hover) + label .radioOuter::after {
  border-radius: 50%;
  display: block;
  border: 0.0625rem dashed #000000;
  content: '';
  height: calc(100% + 0.375rem);
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: calc(100% + 0.375rem);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 1.25rem;
}

.c0 > .radioWrapper {
  margin-top: 1.5rem;
}

.c0 > .radioWrapper:first-child {
  margin-top: 0;
}

<div>
  <div
    aria-label=""
    class="c0"
    role="radiogroup"
  >
    <div
      class="radioWrapper c1"
    >
      <input
        aria-label="Test"
        class="c2"
        id="1"
        name="default"
        role="radio"
        type="radio"
        value="test"
      />
      <label
        class="c3"
        for="1"
        name="default"
      >
        <div
          class="c4"
        >
          <div
            aria-hidden="true"
            class="radioOuter c5"
            focusable="false"
            height="20"
            width="20"
          >
            <div
              class="c6"
            />
          </div>
        </div>
        <div
          class=""
          id="label-1"
          role=""
        >
          <div
            aria-hidden="true"
          >
            Test
          </div>
        </div>
      </label>
    </div>
    <div
      class="radioWrapper c7"
    >
      <input
        aria-label="Test2"
        class="c2"
        id="1"
        name="default2"
        role="radio"
        type="radio"
        value="test2"
      />
      <label
        class="c3"
        for="1"
        name="default2"
      >
        <div
          class="c4"
        >
          <div
            aria-hidden="true"
            class="radioOuter c5"
            focusable="false"
            height="20"
            width="20"
          />
        </div>
        <div
          class=""
          id="label-1"
          role=""
        >
          <div
            aria-hidden="true"
          >
            Test2
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup <RadioButtonGroup/> 1`] = `undefined`;
